--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Crown Jewell Automations</title>
+    <title>Software Engineering in Practice</title>
     <style>
 		html {
 			font-size: 16px;
