--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</style>
 </head>
 <body>
-    <h1>Software Engineering In Practice</h1>
+    <h1>Software Engineering In Practice, (contact: adrianjewell91 at gmail dot com)</h1>
 
 
 <h2>June 14 2022</h2>
