--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -83,10 +83,10 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Delivered and managed event-driven systems that process millions of messages a day, resulting in adoption by storefront, and other analytic teams.</li>
-                                        <li>Delivered microservices that can handle p95 30ms and 10,000 req/min, resulting in adoption by other teams.</li>
-                                        <li>Performed large scale migrations, resulting in massive infrastructure shifts and upgrades within the company.</li>
-                                        <li>(Technologies: Aerospike, Spring/Java, Kafka, MsSQL, C#, .NET, Kubernetes/Helm, Docker, Kibana, DataDog, Grafana, JMeter, Google Cloud/GCP/GKE, GraphQl/Apollo Federation, gRPC, php, InfluxDb).</li>
+                                        <li>Delivered cost reduction, monitoring, and migration efforts, resulting in savings of millions of dollars.</li>
+                                        <li>Built event-driven systems that process millions of messages a day.</li>
+                                        <li>Built and maintained scalable microservices that can handle p95<30ms and 10,000 req/min.</li>
+                                        <li>(Technologies: Aerospike, Spring/Java, Kafka, MsSQL, C#/.NET, Kubernetes/Helm, Docker, Kibana, DataDog, Grafana, JMeter, Google Cloud/GCP/GKE, GraphQl/Apollo Federation, gRPC, php, InfluxDb).</li>
                                     </ul>
                                 </div>
                             </div>
