--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -83,9 +83,9 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Delivered cost reduction, monitoring, and migration efforts, resulting in savings of millions of dollars.</li>
-                                        <li>Built event-driven systems that process millions of messages a day.</li>
-                                        <li>Built and maintained scalable microservices that can handle p95<30ms and 10,000 req/min.</li>
+                                        <li>Delivered resource reduction, debugging, and software/infra migration efforts, resulting in savings of millions of dollars across the organization.</li>
+                                        <li>Built event-driven systems for 30+ million data entities, resulting in satisfying availability requirements for clients.</li>
+                                        <li>Built and maintained scalable microservices that can handle p95<30ms and 10,000 req/min, resulting in contributions to the org-wide decoupling effort.</li>
                                         <li>(Technologies: Aerospike, Spring/Java, Kafka, MsSQL, C#/.NET, Kubernetes/Helm, Docker, Kibana, DataDog, Grafana, JMeter, Google Cloud/GCP/GKE, GraphQl/Apollo Federation, gRPC, php, InfluxDb).</li>
                                     </ul>
                                 </div>
