--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 	</br>	</br>
 	And then there was the RIF: 10% of corporate. Many engineers were let go. I wish I knew more about that, but at the end of the day it just had to happen. 
 	</br>	</br>
+	But what was really interesting was the Google Cloud platform course. At least the first chapter. I didn't realize that the whole thing built on top of 
+	a virtual network, but it makes sense. There has to be a fabric within which all the services operate, and that's the point of the VPC. After I learned this,
+	however, I got really bored and stopped reading. 
+	</br>	</br>
 	So as you can see, I'm a bit disorganized. What have I learned since July? I've learned not that much, honestly: monoliths are bad, decoupling is boring, 
 	waterfall is easy, bugs are challenging. What's coming up next? Learning how to day trade I think, and no side projects. I have a lot of them, for sure, 
 	but will they make money? I don't think so. Better just stick to something I know I can do. 
