--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -83,10 +83,12 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Delivered resource reduction, debugging, and software/infra migration efforts, resulting in savings of millions of dollars across the organization.</li>
-                                        <li>Built event-driven systems for 30+ million data entities, resulting in satisfying availability requirements for clients.</li>
-                                        <li>Built and maintained scalable microservices that can handle p95<30ms and 10,000 req/min, resulting in contributions to the org-wide decoupling effort.</li>
-                                        <li>(Technologies: Aerospike, Spring/Java, Kafka, MsSQL, C#/.NET, Kubernetes/Helm, Docker, Kibana, DataDog, Grafana, JMeter, Google Cloud/GCP/GKE, GraphQl/Apollo Federation, gRPC, php, InfluxDb).</li>
+                                        <li>Designed and owned incremental delivery of projects in an Agile environment, resulting in trust from stakeholders.</li>
+                                        <li>Delivered features, including UI/Frontend, microservices, event-driven systems, containerization, decoupling,
+                                            resulting in satisfaction of stakeholders' requirements for usability, high availability, observability. </li>
+                                        <li>Migrated software systems to GCP, performed upgrades, solved quarter-long debugging efforts, resulting in the completion of company-wide migration, decoupling, cost reduction initiatives.</li>
+                                        <li>Created educational artifacts and mentored new members to the department, resulting in increased developer velocity and shorter critical resolution turn around.</li>   
+                                        <li>(Technologies: Aerospike, Java, Spring, Kafka, MsSQL, C#, .NET, python, Kubernetes, Helm, Docker, Kibana, DataDog, Grafana, JMeter, GCP, GraphQl, Apollo, gRPC, php, InfluxDb).</li>
                                     </ul>
                                 </div>
                             </div>
@@ -101,7 +103,7 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Worked on multi-million dollar supply chain projects that saved companies, and continue to save them tens of thousands to millions of dollars. (Technologies: Javascript, Angular, Web Components, Java).
+                                        <li>Delivered UI features on supply chain projects that drive savings of tens of thousands to millions of dollars. (Technologies: Javascript, Angular, Web Components, Java).
                                         </li>
                                     </ul>
                                 </div>
