--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -118,8 +118,7 @@
                         <div class="experience__description">
                             <div>
                                 <ul>
-                                    <li>Taught full stack software development and algorithms at App Academy, placing over 100 students
-                                        (Technologies: Ruby on Rails, Node, MongoDB, PostGres, React, Redux, d3.js, REST, Webpack).</li>
+                                    <li>Taught full stack software development and algorithms at App Academy, placing over 100 students.</li>
                                 </ul>
                             </div>
                         </div>
@@ -143,18 +142,11 @@
                                             <li>
                                                 Built <a
                                                     href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
-                                                which was accepted into the Oberlin College start up accelerator program. (Python, Keras, TensorFlow, Django, ReactJS). </li>
+                                                which was accepted into the Oberlin College start up accelerator program. </li>
                                             <li>
-                                                Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities, (JS, Node JS, Websockets).</li>
-                                            <li>Launched <a href="https://etherscan.io/token/0x4d7e3487e836cb4e402c25506b4ad81e49e93970">IdeaCoin</a>, an ERC-20 compatible crypto-currency. (Solidity, Ethereum, Blockchain    ).
-                                            <!-- </li>
-                                            <li>State Management: Observations on How Music and Coding are So Similar
-                                                <a
-                                                    href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">(link)</a>
-                                                (gained 42k reads).
-                                            </li> -->
-                                            <!-- <li>Three Part Lecture Series: How Programmers Think <a
-                                                    href="https://github.com/Adrianjewell91/how-to-code">(link)</a>.</li> -->
+                                                Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>
+                                            <li>Launched <a href="https://etherscan.io/token/0x4d7e3487e836cb4e402c25506b4ad81e49e93970">IdeaCoin</a>, an ERC-20 compatible crypto-currency.
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
