--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -83,7 +83,7 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Designed and owned incremental delivery of projects in an Agile environment, resulting in trust from stakeholders.</li>
+                                        <li>Designed and owned incremental delivery in an Agile environment, resulting in trust from stakeholders.</li>
                                         <li>Delivered features, including UI/Frontend, microservices, event-driven systems, containerization, decoupling,
                                             resulting in satisfaction of stakeholders' requirements for usability, high availability, observability. </li>
                                         <li>Migrated software systems to GCP, performed upgrades, solved quarter-long debugging efforts, resulting in the completion of company-wide migration, decoupling, cost reduction initiatives.</li>
