--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 	<p>
 		Adrian Jewell, a Boston-based pianist and composer, has performed within a wide range of genres and styles, including musical theatre, circus, jazz, religious, and classical. He is skilled in the collaborative arts, as well as in the abilities of improvisation and playing by ear. He has performed in China and the United States. He is a graduate of the Oberlin Conservatory in Oberlin Ohio with a dual degree in classical piano performance and neuroscience. 
 	</br>	</br>
-		https://soundcloud.com/adrianjewell/sets
+<a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">Youtube</a>
 	</br>
-		https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos 
+	<a href="https://soundcloud.com/adrianjewell/sets">Soundcloud</a>
 	</br>	</br>
+<a href="https://adrianjewell.com/assets/resume/software-resume.html">Resume</a>
+</br>	</br>
 Philosophy of music pedagogy:
 	</br>	</br>
 Given all the high-quality content available today, is there value in hiring a private teacher? The answer is resoundingly yes! For example, keep in mind the history. In fact, there has always been a vast amount of teaching material, but that content historically was in the form of textbooks, whereas today that content is in the form of videos. So actually, only the medium has changed, rather than the availability. Therefore, just as there previously was value in hiring a teacher, there is still value today. 
