--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -75,20 +75,22 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Wayfair</div>
-                                    <div class="experience__date">Engineer 2: July 2021 - Present (Full-time)</div>
+                                    <div class="experience__date">Engineer L3: March 2023 - Present</div>
                                     </br>
-                                    <div class="experience__date">Engineer 1: Dec. 2019 - July 2021</div>
+                                    <div class="experience__date">Engineer L2: July 2021 - March 2023</div>
+                                    </br>
+                                    <div class="experience__date">Engineer L1: Dec. 2019 - July 2021</div>
                                 </div>
                             </div>
                             <div class="experience__description">
                                 <div>
                                     <ul>
+                                        <li>(Technologies: Kafka, Python, Aerospike, Java/Spring, MsSQL, C#/.NET, Kubernetes/Helm, Docker, Kibana, DataDog, Grafana, JMeter, GCP, GraphQl, Apollo, gRPC, php, InfluxDb).</li>
                                         <li>Designed and owned incremental delivery in an Agile environment, resulting in trust from stakeholders.</li>
-                                        <li>Delivered features, including UI/Frontend, microservices, event-driven systems, containerization, decoupling,
+                                        <li>Delivered features, including event-driven data pipelines, UI/Frontend, monitoring, microservices, containerization, decoupling,
                                             resulting in satisfaction of stakeholders' requirements for usability, high availability, observability. </li>
                                         <li>Migrated software systems to GCP, performed upgrades, solved quarter-long debugging efforts, resulting in the completion of company-wide migration, decoupling, cost reduction initiatives.</li>
                                         <li>Created educational artifacts and mentored new members to the department, resulting in increased developer velocity and shorter critical resolution turn around.</li>   
-                                        <li>(Technologies: Aerospike, Java, Spring, Kafka, MsSQL, C#, .NET, python, Kubernetes, Helm, Docker, Kibana, DataDog, Grafana, JMeter, GCP, GraphQl, Apollo, gRPC, php, InfluxDb).</li>
                                     </ul>
                                 </div>
                             </div>
